--- a/recipe_rest/config/database.yml
+++ b/recipe_rest/config/database.yml
@@ -4,14 +4,37 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 #
+#default: &default
+#  adapter: sqlite3
+#  pool: <%#= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+#  timeout: 5000
+
+#development:
+#  <<: *default
+#  database: db/development.sqlite3
+
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: mydb
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
+  username: myuser
+  password: mypass
+  host: localhost
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: mydb
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  timeout: 5000
+  username: myuser
+  password: mypass
+  host: localhost
+
+
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
