--- a/recipe_rest/Gemfile
+++ b/recipe_rest/Gemfile
@@ -8,9 +8,9 @@ gem 'rails', '~> 6.0.2', '>= 6.0.2.1'
 # Use sqlite3 as the database for Active Record
 #  gem 'sqlite3', '~> 1.4'
 
-gem 'sqlite'
+# gem 'sqlite3'
 
-#gem 'pg'
+gem 'pg'
 
 # Use Puma as the app server
 gem 'puma', '~> 4.1'
@@ -47,3 +47,11 @@ end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
+
+group :development do
+  gem 'sqlite3'    #gem to use in development environment
+end
+
+group :production do
+  gem 'pg'         #gem to use in production environment
+end
